# tech-watch-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Audit complet Tech Watch.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  prompt.md  pyproject.toml  test_deep_research.py
.github/workflows/: ci-frontend.yml  ci-python.yml  ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_rename_metadata.py  003_add_pgvector.py  004_add_watch_profiles.py  005_add_app_config.py  006_watch_profile_scheduling.py  007_add_sessions_missing_columns.py  008_add_session_state_tables.py  009_add_normalized_session_entities.py  010_add_watch_profile_subject.py  011_add_email_groups.py
app/: __init__.py  main.py
app/agents/: __init__.py  registry.py
app/agents/base/: __init__.py  agent_state.py  base_agent.py
app/agents/deep_research/: __init__.py  agent.py  config.py  graph.py  nodes.py  prompts.py  simple_agent.py  state.py
app/agents/newsletter/: __init__.py  agent.py  graph.py  nodes.py  prompts.py  state.py
app/agents/orchestrator/: __init__.py  agent.py  config.py  graph.py  nodes.py  prompts.py  state.py
app/api/: main.py  models.py  security.py
app/api/routers/: __init__.py  articles.py  config.py  email_groups.py  health.py  llm.py  newsletter.py  orchestrator.py  research.py  sessions.py  sources.py  tools.py  users.py  watch_profiles.py
app/config/: settings.py
app/core/: __init__.py  crypto.py  logging.py  models.py  research_brief.py  watch_context.py
app/dashboard/: __init__.py  router.py
app/db/: __init__.py  base.py  models.py  repositories.py
app/delivery/: __init__.py  gmail_client.py  newsletter_renderer.py  service.py
app/memory/: __init__.py  article_store.py  memory_manager.py  session.py  vector_store.py
app/monitoring/: __init__.py  health.py  metrics.py
app/prompts/: newsletter.py
app/rag/: __init__.py  article_store.py  memory_manager.py  session.py  vector_store.py
app/scheduler/: __init__.py  persistent.py  service.py
app/services/: article_ranker.py  article_service.py  llm.py  mcp.py  session_manager.py  streaming_service.py
app/services/embedding/: service.py
app/services/llm/: __init__.py  health.py  model_catalog.py  providers.py
app/skills/: __init__.py  base.py  registry.py
app/skills/predefined/: __init__.py  analysis.py  research.py  social.py
app/templates/: base.html  index.html  newsletter.html  scheduler.html  session_detail.html  sessions.html  settings.html  watch_profiles.html
app/templates/partials/: newsletter_result.html  run_result.html  session_rows.html  stats.html
app/tools/: __init__.py  base.py  registry.py  registry_init.py
app/tools/delivery/: email_tool.py
app/tools/memory/: search_memory.py
app/tools/social/: __init__.py  arxiv.py  github.py  reddit.py  research_paper.py  rss.py  youtube.py
app/tools/web/: __init__.py  cleaner.py  crawl.py  crawl4ai.py  exa.py  extractor.py  free_search.py  jina.py  langsearch.py  multi_search.py  openalex.py  pdf_downloader.py  research_search.py  scholar.py  scrapling.py  search.py  searxng.py  semantic_scholar.py  tavily.py  think.py
docker/: Dockerfile  Dockerfile.frontend  docker-compose.yml  env.docker  init.sql  nginx.conf
docker/ollama/: pull-models.sh
docker/searxng/: settings.yml
docs/: OPEN_SOURCE_READINESS.md  PROJECT_STATUS.md  design_system.md  migration-newsletter-agent.md  ux-dashboard-brief.md
docs/test/: prompts.md
docs/work/: prompt.md  work_prompt.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: LiveRunModal.tsx  NewSessionModal.tsx  SessionCard.tsx  Sidebar.tsx
frontend/src/hooks/: useOrchestratorStream.ts
frontend/src/pages/: EmailGroupsPage.tsx  HomePage.tsx  NewsletterPage.tsx  SessionDetailPage.tsx  SessionsPage.tsx  SettingsPage.tsx  SourcesPage.tsx  TopicsPage.tsx  WatchProfilesPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
scripts/: detect_ollama_models.py
tests/: test_agent_registry.py  test_api.py  test_article_ranker.py  test_base_agent.py  test_deep_research.py  test_delivery_service.py  test_gmail_client.py  test_memory_stack.py  test_models.py  test_newsletter_router.py  test_ollama_direct.py  test_orchestrator.py  test_orchestrator_deep.py  test_orchestrator_integration.py  test_renderer.py  test_search_modes.py  test_settings.py  test_social_tools.py  test_tools.py
