[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tech-watch-agent"
version = "0.1.0"
description = "Automated multi-agent tech watch platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0,<2",
    "beautifulsoup4>=4.12.2,<5",
    "crawl4ai>=0.7.2,<0.8",
    "fastapi>=0.104.1,<1",
    "feedparser>=6.0.10,<7",
    "google-api-python-client>=2.108.0,<3",
    "google-auth-httplib2>=0.1.1,<1",
    "google-auth-oauthlib>=1.1.0,<2",
    "httpx>=0.27,<1",
    "langgraph>=0.6.2,<1.2",
    "markdown2>=2.4.10,<3",
    "postgresql>=16.0,<17",
    "asyncpg>=0.29.0,<1",
    "sqlalchemy[asyncio]>=2.0.25,<3",
    "python-dotenv>=1.0.0,<2",
    "schedule>=1.2.0,<2",
    "uvicorn>=0.24.0,<1",
    "pydantic>=2.0.0,<3",
    "pydantic-settings>=2.0.0,<3",
    "psycopg2-binary>=2.9.9,<3",
    "psutil>=5.9.0,<6",
    "pytest-asyncio>=0.23.0,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
