[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tech-watch-agent"
version = "0.1.0"
description = "Automated multi-agent tech watch and research platform"
license = { file = "LICENSE" }
keywords = ["ai", "agents", "research", "tech-watch", "rag", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0,<2",
    "cryptography>=42.0.0,<45",
    "beautifulsoup4>=4.12.2,<5",
    "crawl4ai>=0.7.2,<0.8",
    "email-validator>=2.1.0,<3",
    "fastapi>=0.104.1,<1",
    "feedparser>=6.0.10,<7",
    "google-api-python-client>=2.108.0,<3",
    "google-auth-httplib2>=0.1.1,<1",
    "google-auth-oauthlib>=1.1.0,<2",
    "httpx>=0.27,<1",
    "langgraph>=0.6.2,<1.2",
    "langgraph-checkpoint-postgres>=2.0.0,<3",
    "markdown2>=2.4.10,<3",
    "openai>=1.30.0,<3",
    "asyncpg>=0.29.0,<1",
    "sqlalchemy[asyncio]>=2.0.25,<3",
    "pgvector>=0.2.0,<1",
    "python-dotenv>=1.0.0,<2",
    "schedule>=1.2.0,<2",
    "uvicorn>=0.24.0,<1",
    "pydantic>=2.0.0,<3",
    "pydantic-settings>=2.0.0,<3",
    "python-multipart>=0.0.9,<1",
    "psycopg2-binary>=2.9.9,<3",
    "psutil>=6.1.0,<7",
    "yt-dlp>=2024.0.0,<2025",
    "youtube-transcript-api>=0.6.0,<1",
    "pymupdf>=1.24.0,<2",
    "requests>=2.31.0,<3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["alembic/"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E402", "W291", "W293", "W292", "F401", "F811"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23.0,<1",
    "pytest-cov>=5,<7",
    "httpx>=0.27,<1",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
]
